# test_cpp_actions

./: travis.yml
.github/workflows/: ccpp.yml
Cpp/: CMakeLists.txt
Cpp/RandomTests/: unit_tests.cpp
Cpp/include/: god.hpp
Cpp/src/: god.cpp
data/: ecosystem_master.db
data/csv/: animal-lion-dtx9olowwl.csv  yearly_deer.csv
data/json/animal/deer/: current.json
data/json/plant/bamboo/: current.json
win/: CMakeLists.txt
win/include/: cool.hpp  main.hpp
win/src/: cool.cpp  main.cpp
